dependencies/charon/charon/tests/ui/unsupported/unbound-lifetime.rs
//@ known-failure
// See https://github.com/AeneasVerif/charon/issues/306

// This is incorrect code but the error is weird.
fn get(_x: &'a u32) {}
